--- a/website/newsletter/127/index.mdx
+++ b/website/newsletter/127/index.mdx
@@ -77,7 +77,7 @@ Storybook 7.0 will have a new Framework API. It will allow the creation of "Fram
 ---
 
 - 🍿 [React.js - The Documentary - Trailer](https://www.youtube.com/watch?v=gmp0istg5xo): a documentary about React should be released in February. In the meantime you can check this 2min trailer. A nice list of guests have participated. I'm really looking forward to seeing this, and remembering the early years of React. This [parody](https://www.youtube.com/watch?v=Ov0alO_k_1k) also made me laugh ;)
-- 📖 Beta docs: [useTransition](https://twitter.com/dan_abramov/status/1598468389340585984) + [Suspense](https://twitter.com/dan_abramov/status/1598412132827435008) + [useDeferredValue](https://twitter.com/dan_abramov/status/1598414645244534784)
+- 📖 Beta docs: [useTransition](https://twitter.com/dan_abramov/status/1598468389340585984) + [Suspense](https://twitter.com/dan_abramov/status/1598412132827435008) + [useDeferredValue](https://twitter.com/dan_abramov/status/1598414645244534784). We can sympathize with Dan Abramov who [dreams of documentation at night](https://twitter.com/dan_abramov/status/1598149838017003520) 😅 Glad this long effort is coming to an end.
 - 📜 [Lessons learned: how I’d rebuild a social web app like Twitter today](https://paularmstrong.dev/blog/2022/11/28/lessons-learned-how-i-would-rebuild-twitter-today/): Paul worked on the Twitter web app. He wonders what choices he would make for it today. He would use Tailwind instead of React-Native-Web, which presents some pragmatic difficulties, and Twitter doesn't use React-Native so the cross-platform benefits are limited. He would also use a more reactive framework like SolidJS or Preact + Signals. Many other interesting points: Vite, Module Federation, Client Hints, Deno...
 - 📜 [React vs React Native: How Different Are They, Really?](https://echobind.com/post/react-vs-react-native-how-different-are-they): details the many similarities and differences between React (DOM) and React-Native. A good resource for web developers who might be tempted to learn React-Native and want to know how much knowledge they will be able to reuse, but also for managers looking to understand what it takes to adopt React-Native.
 - 📜 [Different Dimensions of Remix Deploy Targets](https://andre-landgraf.dev/blog/2022-12-03_different-dimensions-of-remix-deploy-targets): Remix can be deployed on different platforms, thanks to its adapters. This article analyzes each target platform along several dimensions and helps us to make an informed choice.
