--- a/website/newsletter/128/index.mdx
+++ b/website/newsletter/128/index.mdx
@@ -9,8 +9,6 @@ unlisted: true
 
 Hi everyone!
 
-CDH! cross-promo
-
 <Todo />
 
 <!-- truncate -->
@@ -51,7 +49,7 @@ Get started here: [ReactBricks.com](https://reactbricks.com/?utm_source=this_wee
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Developer Nation Survey](/emails/issues/128/dn-survey.png)](https://developereconomics.net/?member_id=thisweekinreact)
+[![Developer Nation Survey - Do you want to make an impact on the developer ecosystem?](/emails/issues/128/dn-survey.png)](https://developereconomics.net/?member_id=thisweekinreact)
 
 **[Do you want to make an impact on the developer ecosystem?](https://developereconomics.net/?member_id=thisweekinreact)**
 
