--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) ([dernier numéro](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre. Voir également le [Journal du Hacker](https://www.journalduhacker.net/?utm_source=reacthebdo), le HackerNews français.
+Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) ([dernier numéro](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre et de l'Open Source.
 
 <!-- truncate -->
 
