--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -41,7 +41,17 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Codux - visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5)
+- [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
+- [SWR 2.0](https://swr.vercel.app/blog/swr-v2)
+- [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/)
+- [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
+- [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
+- [Testing API Calls in useEffect using React Testing Library and Jest](https://www.taniarascia.com/how-to-test-useeffect-api-call/)
+- ["I fixed vanilla-extract/sprinkles using a vite plugin"](https://twitter.com/astahmer_dev/status/1601246126396428289): nouveau plugin Vite qui pourrait réduire significativement le CSS émis par Vanilla-Extract
+- [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
+- [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
+- [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
 
 <SubscribeFormEmbed />
 
@@ -65,7 +75,11 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
+- [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
+- [react-Native-Paper 5.0](https://github.com/callstack/react-native-paper/releases/tag/v5.0.0)
+- [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
+- [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
 
 ---
 
@@ -81,7 +95,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Neolectron - Vanilla Extract Vite plugin thread](https://twitter.com/Neolectron/status/1601473258343518209)
+- [Guillermo Rauch - Ce génie a révolutionné le web](https://www.youtube.com/watch?v=P6L1GJDx32U)
+- [Faire une bonne UI en fermant les yeux](https://www.camilab.co/post/faire-une-bonne-ui-en-fermant-les-yeux/)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -91,12 +107,13 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160)
+- [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/ThePrimeagen/status/1600305901633536001
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
