--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -41,10 +41,19 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
-- [Codux - visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5)
+React Router doc public: https://twitter.com/remix_run/status/1600979694622367744
+
+- Beta docs - [useTransition demo](https://twitter.com/dan_abramov/status/1600709819648069632) + [useSyncExternalStore API ref](https://twitter.com/dan_abramov/status/1600530747550564354)
+
+- [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13) + https://twitter.com/lydiahallie/status/1601247706307256323
+- [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel) + https://twitter.com/rauchg/status/1600913007965413376
+
+- [React-Spring - New doc site](https://twitter.com/_josh_ellis_/status/1602253329526128641)
+- [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs)
+- [Codux - visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5) + [A visual is worth 1000 lines of code](https://dev.to/codux/a-visual-is-worth-1000-lines-of-code-pe) + https://twitter.com/tannerlinsley/status/1600585844196196352
 - [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
-- [SWR 2.0](https://swr.vercel.app/blog/swr-v2)
-- [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/)
+- [SWR 2.0](https://swr.vercel.app/blog/swr-v2) + https://twitter.com/shuding_/status/1601333681096122369
+- [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/) + https://twitter.com/storybookjs/status/1600912626040524801
 - [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
 - [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
 - [Testing API Calls in useEffect using React Testing Library and Jest](https://www.taniarascia.com/how-to-test-useeffect-api-call/)
@@ -52,6 +61,13 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 - [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
 - [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
 - [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
+- [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan annonce aussi son départ de Meta
+- [React team page updated](https://twitter.com/reactjs/status/1601328677677338624)
+- [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
+- [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
+- [vite-plugin-react-swc 3.0](https://twitter.com/vite_js/status/1601258842699878401)
+- [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
+- [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
 
 <SubscribeFormEmbed />
 
@@ -80,6 +96,11 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 - [react-Native-Paper 5.0](https://github.com/callstack/react-native-paper/releases/tag/v5.0.0)
 - [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
 - [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
+- [Expo Router - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
+- [RNR 253 - We React to News: Kotlin's got a new daddy](https://reactnativeradio.com/episodes/rnr-253-we-react-to-news)
+- [Expo docs updates](https://twitter.com/amanhimself/status/1601177437546897408)
+- [New android-performance-profiler API](https://twitter.com/almouro/status/1600887206952198144)
+- [React-Native-Skia-Gesture](https://twitter.com/reactiive_/status/1600494808048467973)
 
 ---
 
@@ -107,13 +128,34 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
+[Vite 4](https://vitejs.dev/blog/announcing-vite4.html)
+
+https://twitter.com/vite_js/status/1601222777197166593
+
+[Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
+
+- [Bun 0.3.0](https://bun.sh/blog/bun-v0.3.0)
+- [Alma - a digital playground for generative graphics](https://twitter.com/emilwidlund/status/1600815398672211969)
+- [TypeScript: Should you use Types or Interfaces?](https://www.youtube.com/watch?v=zM9UPcIyyhQ)
 - [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160)
 - [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha)
+- [Vitest 0.27.7](https://github.com/vitest-dev/vitest/releases/tag/v0.25.7): support Vite 4
+- [GitHub - Release Radar · October 2022 Edition](https://github.blog/2022-12-09-release-radar-october-2022/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
 https://twitter.com/ThePrimeagen/status/1600305901633536001
+
+https://twitter.com/QwikDev/status/1602231562644373504
+
+https://twitter.com/ThePrimeagen/status/1602060279868694528
+
+https://twitter.com/ThePrimeagen/status/1601570856265650176
+
+https://twitter.com/AdamRackis/status/1601405579792068608
+
+https://twitter.com/ken_wheeler/status/1600690335650566144
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
