--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -41,6 +41,15 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
+**[Vite 4](https://vitejs.dev/blog/announcing-vite4.html)**
+
+Vite est un outil frontend qui continue de gagner en popularité. Cette dernière version utilise maintenant **Rollup 3**, qui simplifie grandement la gestion des assets internes de Vite. Il y a maintenant **2 plugins React distincts** avec des tradeoffs différents, à tester et choisir au cas par cas:
+
+- [vite-plugin-react](https://github.com/vitejs/vite-plugin-react): esbuild + Babel
+- [vite-plugin-react-swc](https://github.com/vitejs/vite-plugin-react-swc): replace Babel par SWC en dev, ce qui semble améliorer le cold start et le HMR
+
+---
+
 React Router doc public: https://twitter.com/remix_run/status/1600979694622367744
 
 - Beta docs - [useTransition demo](https://twitter.com/dan_abramov/status/1600709819648069632) + [useSyncExternalStore API ref](https://twitter.com/dan_abramov/status/1600530747550564354)
@@ -48,6 +57,9 @@ React Router doc public: https://twitter.com/remix_run/status/160097969462236774
 - [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13) + https://twitter.com/lydiahallie/status/1601247706307256323
 - [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel) + https://twitter.com/rauchg/status/1600913007965413376
 
+- [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
+
+- [The Evolution of urql](https://formidable.com/blog/2022/evolution-of-urql/)
 - [React-Spring - New doc site](https://twitter.com/_josh_ellis_/status/1602253329526128641)
 - [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs)
 - [Codux - visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5) + [A visual is worth 1000 lines of code](https://dev.to/codux/a-visual-is-worth-1000-lines-of-code-pe) + https://twitter.com/tannerlinsley/status/1600585844196196352
@@ -61,13 +73,13 @@ React Router doc public: https://twitter.com/remix_run/status/160097969462236774
 - [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
 - [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
 - [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
-- [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan annonce aussi son départ de Meta
+- [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan mentionne aussi son départ de Meta
 - [React team page updated](https://twitter.com/reactjs/status/1601328677677338624)
 - [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
 - [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
-- [vite-plugin-react-swc 3.0](https://twitter.com/vite_js/status/1601258842699878401)
 - [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
 - [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
+- [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): le "React-Router-ing" progresse bien
 
 <SubscribeFormEmbed />
 
@@ -93,7 +105,7 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 - [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
 - [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
-- [react-Native-Paper 5.0](https://github.com/callstack/react-native-paper/releases/tag/v5.0.0)
+- [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0)
 - [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
 - [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
 - [Expo Router - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
@@ -128,19 +140,19 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
-[Vite 4](https://vitejs.dev/blog/announcing-vite4.html)
-
-https://twitter.com/vite_js/status/1601222777197166593
-
 [Optimize Interaction to Next Paint](https://web.dev/optimize-inp/) + https://twitter.com/malchata/status/1600896945865760770
 
+- [Ecma International welcomes new members](https://www.ecma-international.org/news/ecma-international-welcomes-new-members-6/): dont Shopify et Vercel
+- [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160): content de voir la coercion arriver, très pratique pour convertir certains params query-string (pagination) en nombres automatiquement.
+- [2022 In Review: What’s New In Web Performance?](https://www.debugbear.com/blog/2022-in-web-performance)
+- [New npm features for secure publishing and safe consumption](https://github.blog/2022-12-06-new-npm-features-for-secure-publishing-and-safe-consumption/): enfin un code explorer sur le site npm!
 - [Bun 0.3.0](https://bun.sh/blog/bun-v0.3.0)
 - [Alma - a digital playground for generative graphics](https://twitter.com/emilwidlund/status/1600815398672211969)
 - [TypeScript: Should you use Types or Interfaces?](https://www.youtube.com/watch?v=zM9UPcIyyhQ)
-- [Zod 3.20](https://twitter.com/colinhacks/status/1602238724120924160)
 - [Tauri Mobile Alpha Release](https://tauri.app/blog/2022/12/09/tauri-mobile-alpha)
 - [Vitest 0.27.7](https://github.com/vitest-dev/vitest/releases/tag/v0.25.7): support Vite 4
 - [GitHub - Release Radar · October 2022 Edition](https://github.blog/2022-12-09-release-radar-october-2022/)
+- [Inside the mind of a frontend developer: Article layout](https://ishadeed.com/article/inside-frontend-developer-mind-article-layout/)
 
 ---
 
@@ -157,5 +169,7 @@ https://twitter.com/ThePrimeagen/status/1601570856265650176
 https://twitter.com/AdamRackis/status/1601405579792068608
 
 https://twitter.com/ken_wheeler/status/1600690335650566144
+
+https://twitter.com/wesbos/status/1600557271569809416
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
