--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) ([dernier numéro](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre et de l'Open Source.
+Cette semaine, je vous propose de découvrir **[Le Courrier Du Hacker](https://lecourrierduhacker.com/?utm_source=reacthebdo)**, la newsletter de [Carl Chenet](https://twitter.com/carl_chenet) (voir la [dernière édition](https://lecourrierduhacker.com/numeros/numero-202?utm_source=reacthebdo)). Vous y trouverez du contenu 100% en français 🇫🇷 sur des sujets variés autour du logiciel libre et de l'Open Source.
 
 <!-- truncate -->
 
@@ -50,36 +50,39 @@ Vite est un outil frontend qui continue de gagner en popularité. Cette dernièr
 
 ---
 
-React Router doc public: https://twitter.com/remix_run/status/1600979694622367744
+**[Codux - Visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5)**
 
-- Beta docs - [useTransition demo](https://twitter.com/dan_abramov/status/1600709819648069632) + [useSyncExternalStore API ref](https://twitter.com/dan_abramov/status/1600530747550564354)
+Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel pour React (et bientôt d'autres frameworks). Il ne s'agit pas de replacer votre IDE actuel, mais plutôt de le compléter. Codux permet de travailler sur un composant en isolation, incluant l'édition de props et styles via une interface visuelle. La video [Meet Codux](https://www.youtube.com/watch?v=KG6i6cCz0P0) devrait aider à mieux comprendre. Cela fait un peu penser à Storybook, mais avec l'édition en plus l'édition et une synchronisation bidirectionnelle avec votre code.
 
-- [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13) + https://twitter.com/lydiahallie/status/1601247706307256323
-- [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel) + https://twitter.com/rauchg/status/1600913007965413376
+---
 
-- [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
+[SWR 2.0](https://swr.vercel.app/blog/swr-v2) + https://twitter.com/shuding_/status/1601333681096122369
 
-- [The Evolution of urql](https://formidable.com/blog/2022/evolution-of-urql/)
-- [React-Spring - New doc site](https://twitter.com/_josh_ellis_/status/1602253329526128641)
-- [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs)
-- [Codux - visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5) + [A visual is worth 1000 lines of code](https://dev.to/codux/a-visual-is-worth-1000-lines-of-code-pe) + https://twitter.com/tannerlinsley/status/1600585844196196352
-- [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
-- [SWR 2.0](https://swr.vercel.app/blog/swr-v2) + https://twitter.com/shuding_/status/1601333681096122369
-- [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/) + https://twitter.com/storybookjs/status/1600912626040524801
-- [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
-- [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
-- [Testing API Calls in useEffect using React Testing Library and Jest](https://www.taniarascia.com/how-to-test-useeffect-api-call/)
-- ["I fixed vanilla-extract/sprinkles using a vite plugin"](https://twitter.com/astahmer_dev/status/1601246126396428289): nouveau plugin Vite qui pourrait réduire significativement le CSS émis par Vanilla-Extract
-- [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
-- [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
-- [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
-- [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan mentionne aussi son départ de Meta
-- [React team page updated](https://twitter.com/reactjs/status/1601328677677338624)
-- [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
-- [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
-- [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
-- [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
-- [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): le "React-Router-ing" progresse bien
+---
+
+- 📖 Beta docs: [team page updated](https://twitter.com/reactjs/status/1601328677677338624) + [useTransition demo](https://twitter.com/dan_abramov/status/1600709819648069632) + [useSyncExternalStore API ref](https://twitter.com/dan_abramov/status/1600530747550564354)
+- 📖 [React Router website repository public](https://twitter.com/remix_run/status/1600979694622367744)
+- 📖 [React-Spring - New doc site](https://twitter.com/_josh_ellis_/status/1602253329526128641)
+- 📖 [New Supabase Docs, built with Next.js](https://supabase.com/blog/new-supabase-docs-built-with-nextjs)
+- 📜 [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/) + https://twitter.com/storybookjs/status/1600912626040524801
+- 📜 [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13) + https://twitter.com/lydiahallie/status/1601247706307256323
+- 📜 [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel) + https://twitter.com/rauchg/status/1600913007965413376
+- 📜 [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
+- 📜 [The Evolution of urql](https://formidable.com/blog/2022/evolution-of-urql/)
+- 📜 [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
+- 📜 [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
+- 📜 [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
+- 📜 [Testing API Calls in useEffect using React Testing Library and Jest](https://www.taniarascia.com/how-to-test-useeffect-api-call/)
+- 💬 [Improve React Query hydration, Streaming SSR & Server Components](https://github.com/TanStack/query/discussions/4623)
+- 🐦 [Xuan Huang - "Forget is in good hands as we now have a team behind it"](https://twitter.com/Huxpro/status/1601345567493214208): Xuan mentionne aussi son départ de Meta
+- 🎨 [React-Three-Editor demo - Threejs Journey scene](https://twitter.com/0xca0a/status/1601315795006410752)
+- 🐦 ["I fixed vanilla-extract/sprinkles using a vite plugin"](https://twitter.com/astahmer_dev/status/1601246126396428289): nouveau plugin Vite qui pourrait réduire significativement le CSS émis par Vanilla-Extract / Sprinkles
+- 🐦 [Ryan Florence - "Next.js isn't really OSS"](https://twitter.com/ryanflorence/status/1600526114010845184)
+- 📦 [React-Nylon](https://github.com/CodyJasonBennett/react-nylon) + [Four](https://github.com/CodyJasonBennett/four): bientôt une [alternative plus légère à Three.js/R3f](https://twitter.com/0xca0a/status/1602286391777546242)?
+- 📦 [Remix 1.8](https://github.com/remix-run/remix/releases/tag/remix%401.8.0): le "React-Router-ing" progresse bien
+- 📦 [Storybook 7.0 beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)
+- 🎥 [Modern Component Library with React & Storybook](https://www.youtube.com/playlist?list=PLKBvDYynKmlWa59k8pnw-EHac2_miPagh)
+- 🎥 [MaterialUI + Qwikify demo](https://twitter.com/Steve8708/status/1601257653367209984)
 
 <SubscribeFormEmbed />
 
@@ -103,16 +106,16 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
-- [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
-- [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
-- [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0)
-- [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
-- [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
-- [Expo Router - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
-- [RNR 253 - We React to News: Kotlin's got a new daddy](https://reactnativeradio.com/episodes/rnr-253-we-react-to-news)
-- [Expo docs updates](https://twitter.com/amanhimself/status/1601177437546897408)
-- [New android-performance-profiler API](https://twitter.com/almouro/status/1600887206952198144)
-- [React-Native-Skia-Gesture](https://twitter.com/reactiive_/status/1600494808048467973)
+- 🎨 [@expo-image demo](https://twitter.com/tsapeta/status/1600888339619799042): Software Mansion travaille sur une alternative à react-native-fast-image
+- 📦 [React-Native-Paper 5.0](https://www.callstack.com/blog/react-native-paper-5-0)
+- 📦 [android-performance-profiler](https://twitter.com/almouro/status/1600887206952198144): nouvelle API disponible
+- 📦 [React-Native-Skia-Gesture demo](https://twitter.com/reactiive_/status/1600494808048467973): detection de gestures pour les éléments d'un canvas Skia
+- 📦 [expo-router@next - Shared Routes + Layout Clones (experimental)](https://twitter.com/Baconbrix/status/1601362300891328513)
+- 📜 [Microsoft - Announcing the evolution of dep-check: align-deps](https://devblogs.microsoft.com/react-native/2022-11-30-announcing-align-deps/)
+- 🔗 [Microsoft - React-Native Devblog](https://devblogs.microsoft.com/react-native/): nouveau blog React-Native sur le site de Microsoft.
+- 🎙️ [RNR 253 - We React to News: Kotlin's got a new daddy](https://reactnativeradio.com/episodes/rnr-253-we-react-to-news)
+- 🎥 [File-based navigation for Expo and React Native](https://www.youtube.com/watch?v=PW4-79MgSO0)
+- 📖 [Expo docs updates](https://twitter.com/amanhimself/status/1601177437546897408)
 
 ---
 
@@ -128,9 +131,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Neolectron - Vanilla Extract Vite plugin thread](https://twitter.com/Neolectron/status/1601473258343518209)
-- [Guillermo Rauch - Ce génie a révolutionné le web](https://www.youtube.com/watch?v=P6L1GJDx32U)
-- [Faire une bonne UI en fermant les yeux](https://www.camilab.co/post/faire-une-bonne-ui-en-fermant-les-yeux/)
+- 🧵 [Neolectron - Thread sur le plugin Vite pour Vanilla Extract](https://twitter.com/Neolectron/status/1601473258343518209)
+- 🎥 [Guillermo Rauch - Ce génie a révolutionné le web](https://www.youtube.com/watch?v=P6L1GJDx32U)
+- 📜 [Faire une bonne UI en fermant les yeux](https://www.camilab.co/post/faire-une-bonne-ui-en-fermant-les-yeux/)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
