--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -52,7 +52,7 @@ Vite est un outil frontend qui continue de gagner en popularité. Cette dernièr
 
 **[Codux - Visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5)**
 
-Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel pour React (et bientôt d'autres frameworks). Il ne s'agit pas de replacer votre IDE actuel, mais plutôt de le compléter. Codux permet de travailler sur un composant en isolation, incluant l'édition de props et styles via une interface visuelle. La video [Meet Codux](https://www.youtube.com/watch?v=KG6i6cCz0P0) devrait aider à mieux comprendre. Cela fait un peu penser à Storybook, mais avec l'édition en plus l'édition et une synchronisation bidirectionnelle avec votre code.
+Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel pour React (et bientôt d'autres frameworks). Il ne s'agit pas de replacer votre IDE actuel, mais plutôt de le compléter. Codux permet de travailler sur un composant en isolation, incluant l'édition de props et styles via une interface visuelle. La video [Meet Codux](https://www.youtube.com/watch?v=KG6i6cCz0P0) devrait aider à mieux comprendre. Cela fait un peu penser à Storybook, mais avec l'édition en plus, et une synchronisation bidirectionnelle avec votre code.
 
 ---
 
