--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -41,22 +41,36 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
+[![SWR 2.0](/emails/issues/128/swr2.png)](https://swr.vercel.app/blog/swr-v2)
+
+**[SWR 2.0](https://swr.vercel.app/blog/swr-v2)**
+
+Nouvelle version majeure pour la librairie de data-fetching de chez Vercel. On y retrouve diverses améliorations, dont:
+
+- Nouveau hook `useSWRMutation`
+- Optimistic UI simplifié
+- Des extensions [SWR DevTools](https://swr-devtools.vercel.app/)
+- Une API impérative de preloading
+- Support React 18 amélioré
+
+---
+
+[![Vite 4](/emails/issues/128/vite4.png)](https://vitejs.dev/blog/announcing-vite4.html)
+
 **[Vite 4](https://vitejs.dev/blog/announcing-vite4.html)**
 
-Vite est un outil frontend qui continue de gagner en popularité. Cette dernière version utilise maintenant **Rollup 3**, qui simplifie grandement la gestion des assets internes de Vite. Il y a maintenant **2 plugins React distincts** avec des tradeoffs différents, à tester et choisir au cas par cas:
+Vite est un outil frontend qui continue de gagner en popularité. Cette dernière version utilise maintenant Rollup 3, qui simplifie grandement la gestion des assets internes de Vite. Il y a maintenant 2 plugins React avec des tradeoffs différents:
 
 - [vite-plugin-react](https://github.com/vitejs/vite-plugin-react): esbuild + Babel
 - [vite-plugin-react-swc](https://github.com/vitejs/vite-plugin-react-swc): replace Babel par SWC en dev, ce qui semble améliorer le cold start et le HMR
 
 ---
 
+[![Codux - Visual IDE for React projects](/emails/issues/128/codux.jpg)](https://dev.to/codux/introducing-codux-15j5)
+
 **[Codux - Visual IDE for React projects](https://dev.to/codux/introducing-codux-15j5)**
 
 Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel pour React (et bientôt d'autres frameworks). Il ne s'agit pas de replacer votre IDE actuel, mais plutôt de le compléter. Codux permet de travailler sur un composant en isolation, incluant l'édition de props et styles via une interface visuelle. La video [Meet Codux](https://www.youtube.com/watch?v=KG6i6cCz0P0) devrait aider à mieux comprendre. Cela fait un peu penser à Storybook, mais avec l'édition en plus, et une synchronisation bidirectionnelle avec votre code.
-
----
-
-[SWR 2.0](https://swr.vercel.app/blog/swr-v2) + https://twitter.com/shuding_/status/1601333681096122369
 
 ---
 
